--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "chainlit>=2.6.0",
     "colorama>=0.4.6",
     "google-api-python-client>=2.175.0",
     "google-auth-httplib2>=0.2.0",
